# bazel-demo

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod
demo-service/: BUILD.bazel  main.go
