module(
    name = "bazel-demo",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.47.1")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "protobuf", version = "26.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)
