load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo-service_lib",
    srcs = ["main.go"],
    importpath = "demo-service/demo-service",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "demo-service",
    embed = [":demo-service_lib"],
    visibility = ["//visibility:public"],
)
